# video

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adobe_video_editing_sample_20260126/other/: readme.txt
adobe_video_editing_sample_20260128/1-Remove_Object/: 0101_prompt.txt  0102_prompt.txt  0104_prompt.txt  0105_prompt.txt  0106_prompt.txt
adobe_video_editing_sample_20260128/2-Replace_Object/: 0201_prompt.txt  0202_prompt.txt  0203_prompt.txt  0204_prompt.txt  0205_prompt.txt
adobe_video_editing_sample_20260128/3-Add_Background/: 0301_prompt.txt  0302_prompt.txt  0303_prompt.txt  0304_prompt.txt  0305_prompt.txt
adobe_video_editing_sample_20260128/4-Remove_Background/: 0404_prompt.txt
adobe_video_editing_sample_20260128/5-Change_Background/: 0501_prompt.txt  0502_prompt.txt  0503_prompt.txt  0504_prompt.txt  0505_prompt.txt
adobe_video_editing_sample_20260128/6-Change_Aesthetic_Style/: 0601_prompt.txt  0602_prompt.txt  0603_prompt.txt  0604_prompt.txt  0605_prompt.txt
adobe_video_editing_sample_20260128/7-Change_Color_Palette/: 0701_prompt.txt  0702_prompt.txt  0703_prompt.txt  0704_prompt.txt  0705_prompt.txt
adobe_video_editing_sample_20260128/8-Entity-to-Video/: 0801_prompt.txt  0802_prompt.txt  0803_prompt.txt  0804_prompt.txt  0805_prompt.txt
docker/temporal-ui-proxy/: inject-i18n.js  nginx.conf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
scripts/: run-tests.ps1  start-platform.ps1  stop-platform.ps1
tests/: conftest.py
video_platform/: __init__.py  config.py  db.py
(+82 files in other folders)
